[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "gdhbot-py"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
cryptography = "^2.9"
df2gspread = "^1.0"
"discord.py" = "^1.3"
gspread = "^3.6"
oauth2client = "^4.1"
pandas = "^1.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
